--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,28 +7,33 @@
     "dev": "nest start --watch",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.15",
+    "@nestjs/common": "^11.1.14",
     "@nestjs/config": "^4.0.3",
-    "@nestjs/core": "^10.4.15",
+    "@nestjs/core": "^11.1.14",
     "@nestjs/jwt": "^11.0.2",
-    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-express": "^11.1.14",
     "@nestjs/swagger": "^11.2.6",
+    "@prisma/client": "^7.4.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.15.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.9",
+    "@nestjs/cli": "^11.0.16",
     "@swc/core": "^1.15.13",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "eslint": "^9.17.0",
-    "typescript": "^5.7.2",
-    "vite": "^7.3.1",
-    "vite-plugin-node": "4"
+    "prisma": "^7.4.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.7.2"
   }
 }
