--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "packageManager": "pnpm@10.4.1",
   "engines": {
     "node": ">=18"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@nestjs/core"
+    ]
   }
 }
