--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,12 +28,16 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.16",
+    "@prisma/adapter-pg": "^7.4.1",
     "@swc/core": "^1.15.13",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.19.13",
+    "@types/pg": "^8.16.0",
+    "dotenv": "^17.3.1",
     "eslint": "^9.17.0",
+    "pg": "^8.19.0",
     "prisma": "^7.4.1",
     "tsx": "^4.21.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.3"
   }
 }
