--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,29 +15,29 @@
     "prisma:seed": "prisma db seed"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "@nestjs/common": "^11.1.14",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.1.14",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "@nestjs/platform-express": "^11.1.14",
     "@nestjs/swagger": "^11.2.6",
-    "bcrypt": "^6.0.0",
     "@prisma/client": "^7.4.1",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.16",
     "@prisma/adapter-pg": "^7.4.1",
     "@swc/core": "^1.15.13",
-    "@types/express": "^5.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.19.13",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.16.0",
